2017-04-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-message.c (select_part): reset adjustments only when
	  displaying a real message part.

2017-04-07  Albrecht Dreß

Do not emit a critical warning

	* src/balsa-mime-widget.c (balsa_mime_widget_new_unknown): Do
	  not emit a critical warning on the console, e.g. when I select
	  an encrypted message, but cancel the decryption:

2017-04-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* libbalsa/gmime-filter-header.c (g_mime_filter_header_new): use
	g_object_new instead of g_object_newv, because the latter is
	deprecated in glib-2.54.

2017-03-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use GMime's native GIO Stream module

	* libbalsa/gmime-stream-gio.h: removed.
	* libbalsa/libbalsa-vfs.c: do not include it.
	* libbalsa/gmime-stream-gio.c: removed.
	* libbalsa/Makefile.am: remove references to them.


2017-03-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/identity.c (libbalsa_identity_combo_box): compare
	active name with the identity name, not the parenthesized
	version

2017-03-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/mailbox_local.c (lbml_load_messages_idle_cb): clear
	load_messages_id even when returning early.

2017-03-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Lock mailbox while accessing an idle callback id

	* libbalsa/mailbox.c (lbm_need_threading_idle_cb),
	(libbalsa_mailbox_msgno_inserted),
	(libbalsa_mailbox_msgno_removed): lock mailbox while accessing
	need_threading_idle_id.

2017-03-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_master_position_cb),
	(bw_slave_position_cb), (bw_size_allocate_cb): remember the new
	position even if maximized.

2017-03-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

Use dialog buttons more consistently

	* src/mailbox-conf.c
	(create_generic_dialog): use GTK_RESPONSE_CANCEL instead of CLOSE
	(run_mailbox_conf): ditto.
